<resources>
    <string name="app_name">Investimentos UTFPR</string>
    <string name="app_title">Simulador de Investimentos UTFPR</string>
    <string name="tv_valor_atingir">Valor a atingir (R$):</string>
    <string name="tv_dep_inicial">Depósito inicial (R$):</string>
    <string name="tv_aporte_mensal">Aporte mensal (R$):</string>
    <string name="tv_rend_mensal">Rendimento mensal (%):</string>
    <string name="btnCalcular">Calcular</string>
    <string name="btnLimpar">Limpar</string>
    <string name="app_title2">Evolução dos Investimentos:</string>
    <string name="btnFechar">Fechar</string>
    <string name="tab_atrb_mes">Mês</string>
    <string name="tab_atrb_juros">Juros</string>
    <string name="tab_atrb_deposito">Depósito</string>
    <string name="tab_atrb_reserva">Reserva</string>
    <string name="campos_limpos">Campos limpos!</string>
    <string name="close_message">Você deseja fechar a aplicação?</string>
    <string name="campos_invalidos">Campos inválidos!</string>
    <string name="valor_atingir_invalido">Valor a ser atingido deve ser no mínimo R$10.000,00</string>
    <string name="deposito_invalido">O depósito inicial está incorreto e não pode ser negativo</string>
    <string name="aporte_invalido">O aporte está incorreto e não pode ser negativo</string>
    <string name="juros_invalido">O rendimento mensal está incorreto e não pode ser negativo</string>
</resources>