<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="30sp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200sp"
            android:text="@string/tv_valor_atingir"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edValorAtingir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="100000"
            android:inputType="text"
            android:minWidth="200sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200sp"
            android:text="@string/tv_dep_inicial"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edDepInicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="1000"
            android:inputType="text"
            android:minWidth="200sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200sp"
            android:text="@string/tv_aporte_mensal"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edAporteMensal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="500"
            android:inputType="text"
            android:minWidth="200sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200sp"
            android:text="@string/tv_rend_mensal"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edRendMensal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0.99"
            android:inputType="text"
            android:minWidth="200sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:onClick="calcular"
            android:text="@string/btnCalcular"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:onClick="limpar"
            android:text="@string/btnLimpar"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>